# yodlee-cli

./: .gitignore  Cargo.toml  README.md
src/: account.rs  main.rs  user.rs
