[package]
name = "yodlee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive", "env"] }
serde_json = "1.0.79"
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "fs"] }
yodlee-rs = { git = "https://github.com/avranju/yodlee-rs.git", rev = "2814b1f45196ae5688771fe61df64d77976bdf37" }